tests/machine/x/cpp/string_prefix_slice.mochi.error
line 15: ../../../tests/machine/x/cpp/string_prefix_slice.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/string_prefix_slice.mochi.cpp:15:18: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
   15 |     print((s1[0] == prefix));
      |            ~~~~~~^~~~~~~~~
../../../tests/machine/x/cpp/string_prefix_slice.mochi.cpp:17:18: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
   17 |     print((s2[0] == prefix));
      |            ~~~~~~^~~~~~~~~

 14 |     auto s1 = "forest";
 15 |     print((s1[0] == prefix));
 16 |     auto s2 = "desert";
